# audioscopeAI

./: .gitignore  README.md  dfx.json  package-lock.json  start-servers-with-llm.bat
src/audioscopeAI_AI-ML/: model.onnx  spectogram.ipynb
src/audioscopeAI_AI-ML/audioscopeAI_backend/src/: respiratory_sound_classifier.onnx
src/audioscopeAI_backend/: Cargo.toml
src/audioscopeAI_backend/src/: audio_inference_pipeline.pkl  predict.py
src/audioscopeai-backend/: README.md  app.py  config.py  llm_service.py  models.py  pipeline.py  run.py  utils.py
src/audioscopeai-frontend/: README-Integration.md  api-integration.js  index.html  script.js
src/web3_backend/: Cargo.toml  main.mo
src/web3_backend/models/: label_encoder.json  model.onnx
src/web3_backend/src/: lib.rs
src/web3_frontend/: index.html  package.json  tailwind.config.js
src/web3_frontend/src/: hero.jsx  index.css  main.jsx  nav.jsx  predict.jsx
