[package]
name = "web3_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.11"
ic-cdk-macros = "0.6"
ic-cdk-timers = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
hound = "3.5.0"
tract-onnx = "0.19.9"
tract-core = "0.19.9"
tract-ndarray = "0.15"
serde_candid = "0.5"
